fix: overflow issue in forms

--- a/lucuberate-client/src/App.css
+++ b/lucuberate-client/src/App.css
@@ -81,13 +81,14 @@ body, html, #root, .app {
           justify-content: flex-start;
   color: var(--text-color);
   background: var(--background-main);
+  height: 100%;
 }
 
 .nav-bar {
   z-index: 4;
   height: 50px;
   width: 100%;
-  position: absolute;
+  /* position: absolute; */
   color: var(--background-main);
   background-color: var(--border-color);
   -webkit-box-pack: justify;
@@ -112,8 +113,7 @@ body, html, #root, .app {
   -webkit-box-flex: 4;
       -ms-flex: 4;
           flex: 4;
-  margin-top: 30px;
-  height: 100%;
+  /* height: 100%; */
   width: 100%; 
   background-image: url('./images/stars.png');
 }
@@ -183,28 +183,19 @@ body, html, #root, .app {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding-top: 15px;
+  padding-top: 20px;
+  
 }
 
 /* ----------------------------- Form Pages */
 
 .form-container{
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  margin-top: 60px;
+  display: inline-block;
+  padding-top: 20px;
 }
 
 .cube-form {
-  margin-top: 10px;
-  height: 60vh;
-  width: 70vw;
+  margin: 0 10vw;
 }
 
 .form-row {
@@ -215,6 +206,11 @@ body, html, #root, .app {
 
 .form-title {
   text-align: center;
+}
+
+.required-warning {
+  text-align: center;
+  font-size: 14px;
 }
   
 .form-buttons {
@@ -279,7 +275,7 @@ body, html, #root, .app {
           align-items: center;
   -ms-flex-pack: distribute;
       justify-content: space-around;
-  padding-top: 30px;
+  padding-top: 23px;
   width: 100%;
 }
 
@@ -789,7 +785,6 @@ input[type="radio"]:checked + label {
     -webkit-box-flex: 6;
             -ms-flex: 6;
                 flex: 6;
-    padding-bottom: 180vmin;
   }
 
   .form-buttons {
@@ -811,7 +806,6 @@ input[type="radio"]:checked + label {
     -webkit-box-pack: center;
         -ms-flex-pack: center;
       justify-content: center;
-    margin-top: 30px;
     padding-bottom: 0;
     border-bottom: 8px solid var(--border-color);
     border-right: none;
